[gd_scene load_steps=11 format=3 uid="uid://vwwe2bp0x2mn"]

[ext_resource type="Script" uid="uid://cm7asjegw28oe" path="res://scripts/ui/Settings.gd" id="1_5p8wc"]
[ext_resource type="Theme" uid="uid://dy2ly8e3tggi0" path="res://assets/themes/menu.theme" id="1_f4mfi"]
[ext_resource type="PackedScene" uid="uid://dkugvwc2gd622" path="res://scenes/main_menu.tscn" id="2_6wm04"]
[ext_resource type="Script" uid="uid://d3bs8pk2myvln" path="res://scripts/ui/helpers/ActionRebindButton.gd" id="2_r6d6q"]
[ext_resource type="Script" uid="uid://nobo2pvlx00b" path="res://scripts/ui/controls/OcMenuContainer.gd" id="5_es4n0"]
[ext_resource type="Script" uid="uid://boc05sevt2wad" path="res://scripts/ui/controls/OcMenuButton.gd" id="5_gis3k"]
[ext_resource type="Script" uid="uid://b0pl8rrbk6ik8" path="res://scripts/ui/controls/OcMenuTabContainer.gd" id="6_83j8s"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_m1w60"]
content_margin_left = 30.0
content_margin_top = 30.0
content_margin_right = 30.0
content_margin_bottom = 30.0
bg_color = Color(0.067, 0.082, 0.098, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_es4n0"]
content_margin_left = 5.0
content_margin_top = 5.0
content_margin_right = 5.0
content_margin_bottom = 5.0
bg_color = Color(0.07450981, 0.09019608, 0.105882354, 0.49803922)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_83j8s"]
content_margin_left = 5.0
content_margin_top = 5.0
content_margin_right = 5.0
content_margin_bottom = 5.0
bg_color = Color(0.11365, 0.1279, 0.1431, 1)
border_color = Color(0.224, 0.255, 0.271, 1)

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_f4mfi")
script = ExtResource("1_5p8wc")
back_scene = ExtResource("2_6wm04")

[node name="OCMenuContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_m1w60")
script = ExtResource("5_es4n0")
noise_enabled = true
noise_opacity = 0.02
noise_grain = 1.0
metadata/_custom_type_script = "uid://nobo2pvlx00b"

[node name="Root" type="VBoxContainer" parent="OCMenuContainer"]
layout_mode = 2

[node name="TopBar" type="PanelContainer" parent="OCMenuContainer/Root"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_es4n0")

[node name="Row" type="HBoxContainer" parent="OCMenuContainer/Root/TopBar"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="LeftActions" type="HBoxContainer" parent="OCMenuContainer/Root/TopBar/Row"]
custom_minimum_size = Vector2(180, 0)
layout_mode = 2

[node name="Back" type="Button" parent="OCMenuContainer/Root/TopBar/Row/LeftActions"]
unique_name_in_owner = true
layout_mode = 2
text = "Back"
script = ExtResource("5_gis3k")
metadata/_custom_type_script = "uid://boc05sevt2wad"

[node name="Title" type="Label" parent="OCMenuContainer/Root/TopBar/Row"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "Settings"
horizontal_alignment = 1

[node name="RightActions" type="HBoxContainer" parent="OCMenuContainer/Root/TopBar/Row"]
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
alignment = 2

[node name="Defaults" type="Button" parent="OCMenuContainer/Root/TopBar/Row/RightActions"]
unique_name_in_owner = true
layout_mode = 2
text = "Reset Defaults"
script = ExtResource("5_gis3k")
metadata/_custom_type_script = "uid://boc05sevt2wad"

[node name="Apply" type="Button" parent="OCMenuContainer/Root/TopBar/Row/RightActions"]
unique_name_in_owner = true
layout_mode = 2
text = "Apply"
script = ExtResource("5_gis3k")
metadata/_custom_type_script = "uid://boc05sevt2wad"

[node name="Tabs" type="TabContainer" parent="OCMenuContainer/Root"]
layout_mode = 2
size_flags_vertical = 3
current_tab = 0
script = ExtResource("6_83j8s")
metadata/_custom_type_script = "uid://b0pl8rrbk6ik8"

[node name="Video" type="VBoxContainer" parent="OCMenuContainer/Root/Tabs"]
layout_mode = 2
theme_override_constants/separation = 6
metadata/_tab_index = 0

[node name="GridContainer" type="GridContainer" parent="OCMenuContainer/Root/Tabs/Video"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 10
columns = 2

[node name="L1" type="Label" parent="OCMenuContainer/Root/Tabs/Video/GridContainer"]
layout_mode = 2
text = "Mode"

[node name="Mode" type="OptionButton" parent="OCMenuContainer/Root/Tabs/Video/GridContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="L2" type="Label" parent="OCMenuContainer/Root/Tabs/Video/GridContainer"]
layout_mode = 2
text = "Resolution"

[node name="Resolution" type="OptionButton" parent="OCMenuContainer/Root/Tabs/Video/GridContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="L3" type="Label" parent="OCMenuContainer/Root/Tabs/Video/GridContainer"]
layout_mode = 2
text = "VSync"

[node name="VSync" type="CheckBox" parent="OCMenuContainer/Root/Tabs/Video/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme_override_styles/hover = SubResource("StyleBoxFlat_83j8s")

[node name="L4" type="Label" parent="OCMenuContainer/Root/Tabs/Video/GridContainer"]
layout_mode = 2
text = "Render Scale"

[node name="RowScale" type="HBoxContainer" parent="OCMenuContainer/Root/Tabs/Video/GridContainer"]
layout_mode = 2

[node name="RenderScale" type="HSlider" parent="OCMenuContainer/Root/Tabs/Video/GridContainer/RowScale"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
min_value = 50.0
max_value = 200.0
step = 5.0
value = 100.0

[node name="ScaleValue" type="Label" parent="OCMenuContainer/Root/Tabs/Video/GridContainer/RowScale"]
unique_name_in_owner = true
layout_mode = 2
text = "100%"

[node name="L5" type="Label" parent="OCMenuContainer/Root/Tabs/Video/GridContainer"]
layout_mode = 2
text = "FPS Cap"

[node name="FPSCap" type="SpinBox" parent="OCMenuContainer/Root/Tabs/Video/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
max_value = 480.0
suffix = " FPS"

[node name="Audio" type="VBoxContainer" parent="OCMenuContainer/Root/Tabs"]
visible = false
layout_mode = 2
theme_override_constants/separation = 6
metadata/_tab_index = 1

[node name="DevicesLabel" type="Label" parent="OCMenuContainer/Root/Tabs/Audio"]
layout_mode = 2
theme_type_variation = &"HeaderMedium"
text = "Audio Devices"

[node name="DevicesGrid" type="GridContainer" parent="OCMenuContainer/Root/Tabs/Audio"]
layout_mode = 2
columns = 2

[node name="OutputLabel" type="Label" parent="OCMenuContainer/Root/Tabs/Audio/DevicesGrid"]
layout_mode = 2
text = "Output Device (Speakers):"

[node name="OutputDevice" type="OptionButton" parent="OCMenuContainer/Root/Tabs/Audio/DevicesGrid"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="InputLabel" type="Label" parent="OCMenuContainer/Root/Tabs/Audio/DevicesGrid"]
layout_mode = 2
text = "Input Device (Microphone):"

[node name="InputDevice" type="OptionButton" parent="OCMenuContainer/Root/Tabs/Audio/DevicesGrid"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="HSeparator" type="HSeparator" parent="OCMenuContainer/Root/Tabs/Audio"]
layout_mode = 2

[node name="VolumesLabel" type="Label" parent="OCMenuContainer/Root/Tabs/Audio"]
layout_mode = 2
theme_type_variation = &"HeaderMedium"
text = "Volume Levels"

[node name="BusesList" type="GridContainer" parent="OCMenuContainer/Root/Tabs/Audio"]
unique_name_in_owner = true
layout_mode = 2
columns = 4

[node name="Controls" type="VBoxContainer" parent="OCMenuContainer/Root/Tabs"]
visible = false
layout_mode = 2
theme_override_constants/separation = 6
metadata/_tab_index = 2

[node name="Info" type="Label" parent="OCMenuContainer/Root/Tabs/Controls"]
layout_mode = 2
text = "Click a binding to change it. Press ESC to clear."

[node name="ControlsList" type="VBoxContainer" parent="OCMenuContainer/Root/Tabs/Controls"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="CtrlsButtons" type="VBoxContainer" parent="OCMenuContainer/Root/Tabs/Controls"]
layout_mode = 2

[node name="ResetBindings" type="Button" parent="OCMenuContainer/Root/Tabs/Controls/CtrlsButtons"]
unique_name_in_owner = true
layout_mode = 2
text = "Reset Bindings"

[node name="Gameplay" type="VBoxContainer" parent="OCMenuContainer/Root/Tabs"]
visible = false
layout_mode = 2
theme_override_constants/separation = 6
metadata/_tab_index = 3

[node name="RebindTemplate" type="Button" parent="."]
visible = false
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0
script = ExtResource("2_r6d6q")
